<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/goButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="184dp"
        android:background="@android:color/holo_green_light"
        android:onClick="start"
        android:padding="40dp"
        android:text="@string/go"
        android:textSize="60sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/gameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/resultTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="124dp"
            android:layout_marginLeft="124dp"
            android:layout_marginEnd="123dp"
            android:layout_marginRight="123dp"
            android:padding="10dp"
            android:text="@string/correct"
            android:textColor="@android:color/background_light"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gridLayout" />

        <TextView
            android:id="@+id/timerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:background="@android:color/holo_orange_light"
            android:padding="10dp"
            android:text="@string/_30s"
            android:textSize="40sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/scoreTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:background="@color/colorAccent"
            android:padding="5dp"
            android:text="@string/_0_0"
            android:textSize="40sp"
            app:layout_constraintStart_toEndOf="@+id/sumTextView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/sumTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:background="@android:color/background_light"
            android:padding="10dp"
            android:text="@string/_31_7"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/timerTextView"
            app:layout_constraintTop_toTopOf="parent" />

        <GridLayout
            android:id="@+id/gridLayout"
            android:layout_width="320dp"
            android:layout_height="250dp"
            android:layout_marginStart="46dp"
            android:layout_marginLeft="46dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="45dp"
            android:layout_marginRight="45dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timerTextView">

            <Button
                android:id="@+id/button0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:background="@android:color/holo_green_light"
                android:onClick="chooseAnswer"
                android:tag="0"
                android:text="@string/_14"
                android:textSize="70sp" />

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:background="@android:color/holo_purple"
                android:onClick="chooseAnswer"
                android:tag="1"
                android:text="@string/_14"
                android:textSize="70sp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_rowWeight="1"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:background="@android:color/holo_blue_dark"
                android:onClick="chooseAnswer"
                android:tag="2"
                android:text="@string/_14"
                android:textSize="70sp" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_rowWeight="1"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:background="@android:color/holo_red_light"
                android:onClick="chooseAnswer"
                android:tag="3"
                android:text="@string/_14"
                android:textSize="70sp" />
        </GridLayout>

        <Button
            android:id="@+id/playAgainButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="126dp"
            android:layout_marginLeft="126dp"
            android:layout_marginTop="413dp"
            android:layout_marginEnd="126dp"
            android:layout_marginRight="126dp"
            android:onClick="playAgain"
            android:text="@string/play_again"
            android:textSize="24sp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/hiScoreTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@android:color/holo_orange_dark"
            android:padding="10dp"
            android:text="@string/hi_score"
            android:textColor="@android:color/background_light"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/playAgainButton" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>